--- a/temp.tex
+++ b/temp.tex
@@ -19,8 +19,8 @@
 \input{theory.tex}
 \chapter{Experimental and numerical methods}
 \input{expe.tex}
-%\chapter{Results}
-%\input{result.tex}
+\chapter{Results}
+\input{result.tex}
 \label{endtext} 
 
 
