fixed figure names from opex

--- a/result.tex
+++ b/result.tex
@@ -235,31 +235,17 @@ The situation is different in the terahertz range, as the lattice of the crystal
 \begin{figure} \caption{img/STOBar\_photo\_narrow.pdf}  \centering \includegraphics[width=10cm]{img/STOBar_photo_narrow.pdf} \end{figure} \clearpage
 \begin{figure} \caption{img/STOBar\_photo.pdf}  \centering \includegraphics[width=10cm]{img/STOBar_photo.pdf} \end{figure} \clearpage
 \begin{figure} \caption{img/STObar\_rt.pdf}  \centering \includegraphics[width=10cm]{img/STObar_rt.pdf} \end{figure} \clearpage
+\begin{figure} \caption{img/EBars\_STO\_sketch.pdf}  \centering \includegraphics[width=10cm]{img/EBars_STO_sketch.pdf} \end{figure} \clearpage
 %}}}
 \section{Dielectric rods parallel to electric field} % references to ->
 %{{{
 % TODO refereence  also to \cite{valdivia2012} and \cite{shi2007}
-\begin{figure} \caption{img/EBars\_STO\_sketch.pdf}  \centering \includegraphics[width=10cm]{img/EBars_STO_sketch.pdf} \end{figure} \clearpage
-
-\begin{figure} \caption{img/ERods\_1st\_and\_2nd\_Mie\_resonance.pdf}  \centering \includegraphics[width=10cm]{img/ERods_1st_and_2nd_Mie_resonance.pdf} \end{figure} \clearpage
-
-\begin{figure} \caption{img/ERods\_eps100\_double\_a100a080\_FDTD.pdf}  \centering \includegraphics[width=10cm]{img/ERods_eps100_double_a100a080_FDTD.pdf} \end{figure} \clearpage
 
 
-\begin{figure} \caption{img/ERods\_sketch\_of\_separate\_spectra\_to\_continuous\_scan.pdf}  \centering \includegraphics[width=10cm]{img/ERods_sketch_of_separate_spectra_to_continuous_scan.pdf} \end{figure} \clearpage
-\begin{figure} \caption{img/ERods\_eps100\_spacingscan\_Nim.pdf}  \centering \includegraphics[width=10cm]{img/ERods_eps100_spacingscan_Nim.pdf} \end{figure} \clearpage
-\begin{figure} \caption{img/ERods\_eps100\_spacingscan\_Nre.pdf}  \centering \includegraphics[width=10cm]{img/ERods_eps100_spacingscan_Nre.pdf} \end{figure} \clearpage
-\begin{figure} \caption{img/ERods\_eps100\_spacingscan\_drawn\_bands.pdf}  \centering \includegraphics[width=10cm]{img/ERods_eps100_spacingscan_drawn_bands.pdf} \end{figure} \clearpage
-\begin{figure} \caption{img/ERods\_eps030\_spacingscan\_drawn\_bands.pdf} \centering \includegraphics[width=10cm]{img/ERods_eps030_spacingscan_drawn_bands.pdf} \end{figure} \clearpage
-
-\begin{figure} \caption{img/ERods\_eps100\_R11\_PWEM.pdf}  \centering \includegraphics[width=10cm]{img/ERods_eps100_R11_PWEM.pdf} \end{figure} \clearpage
-\begin{figure} \caption{img/ERods\_eps100\_single\_a120\_FDTD.pdf}  \centering \includegraphics[width=10cm]{img/ERods_eps100_single_a120_FDTD.pdf} \end{figure} \clearpage
-\begin{figure} \caption{img/ERods\_eps100\_triple\_a150a100a080\_FDTD.pdf}  \centering \includegraphics[width=10cm]{img/ERods_eps100_triple_a150a100a080_FDTD.pdf} \end{figure} \clearpage
-\begin{figure} \caption{img/ERods\_forSeefeld\_sparserN\_denserN\_DrawnBands.pdf}  \centering \includegraphics[width=10cm]{img/ERods_forSeefeld_sparserN_denserN_DrawnBands.pdf} \end{figure} \clearpage
 
 
-\begin{figure} \caption{img/ERods\_sketch\_recordedline.pdf}  \centering  \includegraphics[width=10cm]{img/ERods_sketch_recordedline.pdf} \end{figure} \clearpage
-\begin{figure} \caption{img/ERods\_eps100\_R10u5\_FXplot.pdf}  \centering \includegraphics[width=10cm]{img/ERods_eps100_R10u5_FXplot.pdf} \end{figure} \clearpage
+
+
 %}}}
 
 
@@ -302,7 +288,7 @@ The bars used had rectangular cross-section, being 26 $\upmu$m thick, 66 $\upmu$
 
 \add{ %{{{ FROM OPEX
 \begin{figure}
-\centering \includegraphics[width=\textwidth]{Fig1.eps}
+\centering \includegraphics[width=14cm]{img/ERods_1st_and_2nd_Mie_resonance.pdf}
 \caption{(a) Perspective view of the unit cell\add{; (b) its}
 cross-sections with the resonant modes excited by a plane wave with $\mathbf{E}||x,
 \mathbf{H}||y$ and $\mathbf{k}||z$. The first Mie resonance has an electric dipole moment
@@ -389,10 +375,9 @@ Fig.\ \ref{fg_spec}. In this way we retain the information about the number of t
 planes intersecting the unit cell, which is important for our discussion.
 
 \section{Results}
-\begin{figure}
-	  \centering
-\includegraphics[angle=270,width=105mm]{Fig2a.eps}
-\includegraphics[angle=270,width=105mm]{Fig2b.eps}
+\begin{figure} \centering
+\includegraphics[angle=270,width=105mm]{img/ERods_eps100_double_a100a080_FDTD.pdf}
+\includegraphics[angle=270,width=105mm]{img/ERods_eps100_single_a120_FDTD.pdf}
 \caption{Results of the FDTD simulations for a single layer of dielectric rods with $\varepsilon_{\rm r}= 100$,
 $\rho=10$\,$\upmu$m. The spectra of reflection $|r|$ and transmission $|t|$ amplitudes share
 their frequency axes with the retrieved complex effective index of refraction $\Neff$,
@@ -504,8 +489,13 @@ and open. This pair of open nodal surfaces dividing the unit cell manifests itse
 qualitative change of the $\Neff'$ spectrum towards a shape typical for one-dimensional
 photonic crystals.
 
-\begin{figure}\centering
-\includegraphics[width=0.5\textwidth]{Fig3a.eps}\includegraphics[width=0.5\textwidth]{Fig3b.eps}
+\begin{figure}\centering 
+\includegraphics[width=0.5\textwidth]{img/ERods_sketch_of_separate_spectra_to_continuous_scan.pdf}
+\caption{} \label{fg_spacingscan100formation}. 
+\end{figure}
+
+\begin{figure}\centering  %% TODO rename Re<--->Im
+\includegraphics[width=0.5\textwidth]{img/ERods_eps100_spacingscan_Nim.pdf}\includegraphics[width=0.5\textwidth]{img/ERods_eps100_spacingscan_Nre.pdf}
 \caption{Real ($\Neff'$, left panel) and imaginary ($\Neff''$, right panel) parts of
 the refractive index for a dielectric rod array with permittivity $\varepsilon_r =100$,
 radius $\rho = 10$ $\upmu$m and a variable unit cell size $20\:\upmu$m $<a<200\:\upmu$m. 
@@ -527,7 +517,7 @@ one-dimensional photonic crystals, namely, the photonic (Bragg) band gaps which 
 painted in color in Fig.~\ref{fg_drawn100}.
 
 \begin{figure}
-    \includegraphics[width=\textwidth]{Fig4.eps}
+    \includegraphics[width=15cm]{img/ERods\_eps100\_spacingscan\_drawn\_bands.pdf}
     \caption{Scheme of band gaps and Mie resonances under the same conditions as
     in Fig.~\ref{fg_spacingscan100}.}
 \label{fg_drawn100}
@@ -549,7 +539,7 @@ negative-index band is shown in black in Fig.~\ref{fg_drawn100}.
 
 \begin{figure}
 	\centering
-    \includegraphics[width=7cm]{Fig5.eps}
+    \includegraphics[width=7cm]{img/ERods\_eps030\_spacingscan\_drawn\_bands.pdf}
     \caption{Scheme of band gaps and Mie resonances for dielectric permittivity $\varepsilon_r = 30$. The Mie resonances shift to higher frequencies relative to the band gaps and no $\Neff'<0$ region is formed for any unit cell size (cf. Fig. \ref{fg_drawn100})}
 \label{fg_drawn030}
 \end{figure}
@@ -622,6 +612,15 @@ of the dielectric bars \cite{peng2007}, implying that most of the resonant energ
 the dielectric (which is characteristic of MMs).
 }
 %}}}
+
+\begin{figure} \caption{img/ERods\_eps100\_R11\_PWEM.pdf}  \centering \includegraphics[width=10cm]{img/ERods_eps100_R11_PWEM.pdf} \end{figure} \clearpage
+%  \begin{figure} \caption{img/ERods\_eps100\_single\_a120\_FDTD.pdf}  \centering \includegraphics[width=10cm]{img/ERods_eps100_single_a120_FDTD.pdf} \end{figure} \clearpage
+%  \begin{figure} \caption{img/ERods\_eps100\_triple\_a150a100a080\_FDTD.pdf}  \centering \includegraphics[width=10cm]{img/ERods_eps100_triple_a150a100a080_FDTD.pdf} \end{figure} \clearpage
+%  \begin{figure} \caption{img/ERods\_forSeefeld\_sparserN\_denserN\_DrawnBands.pdf}  \centering \includegraphics[width=10cm]{img/ERods_forSeefeld_sparserN_denserN_DrawnBands.pdf} \end{figure} \clearpage
+
+\begin{figure} \caption{img/ERods\_sketch\_recordedline.pdf}  \centering  \includegraphics[width=10cm]{img/ERods_sketch_recordedline.pdf} \end{figure} \clearpage
+\begin{figure} \caption{img/ERods\_eps100\_R10u5\_FXplot.pdf}  \centering \includegraphics[width=10cm]{img/ERods_eps100_R10u5_FXplot.pdf} \end{figure} \clearpage
+
 \section{Metallic screen with a slit} % references to ->
 
 \section{A fishnet - metallic screen with holes} % references to ->
